gcc-defaults (1.108) UNRELEASED; urgency=low

  [ Matthias Klose ]
  * debian/rules: Remove duplicate code.
  
  [ Aurelien Jarno ]
  * Add support for s390x.

 -- Matthias Klose <doko@debian.org>  Fri, 15 Jul 2011 11:31:48 +0200

gcc-defaults (1.107) unstable; urgency=low

  * Enable multiarch build for libgcj-bc. Closes: #633359.
  * Don't care about gc[cj]-4.6 build dependencies on m68k.
  * Fix last references to obsolete gcj package.

 -- Matthias Klose <doko@debian.org>  Sat, 09 Jul 2011 19:23:28 +0200

gcc-defaults (1.106) unstable; urgency=low

  * Bump GCC 4.6 versions to 4.6.1.
  * Bump GCC 4.4 versions to 4.4.6.
  * Default to 4.6 for sh4 (Nobuhiro Iwamatsu). Closes: #633073.
  * Default to 4.6 for ia64 (email exchange with Bdale Garbee).
  * Default to 4.6 for sparc64 (Aurelian Jarno).
  * Default to 4.6 for sparc. Last "supported" architecture in Debian
    using GCC 4.4, but unmaintained by the Debian GCC maintainers.
  * Make cpp Multi-Arch: allowed. Closes: #630853.
  * cpp: Don't call update-alternatives on upgrade. Closes: #568299.

 -- Matthias Klose <doko@debian.org>  Sat, 09 Jul 2011 15:59:53 +0200

gcc-defaults (1.105) unstable; urgency=low

  * Build libgcj-bc for multiarch. Closes: #630417.

 -- Matthias Klose <doko@debian.org>  Thu, 16 Jun 2011 23:47:48 +0200

gcc-defaults (1.104) unstable; urgency=low

  * Bump libgcj version for gcj-4.6. Closes: #624632.
  * gcc-multilib: Drop the pre-depends on linux-libc-dev. Closes: #624660.

 -- Matthias Klose <doko@debian.org>  Sat, 30 Apr 2011 20:44:40 +0200

gcc-defaults (1.103) unstable; urgency=low

  * Don't build gccgo on armel and armhf. Closes: #622095.
  * Add dependency on gcc-multilib to the other -multilib packages.
  * Stop building transitional gij and gcj packages.
  * Default to 4.6 for x86, armel, hppa, powerpc.
  * Default to 4.6 for armhf (Konstantinos Margaritis).
  * Default to 4.6 for hurd-i386 (Samuel Thibault).
  * Default to 4.6 for s390 (Bastian Blank).